--- a/login.css
+++ b/login.css
@@ -4,7 +4,7 @@
 .circular {
 	width:30%;
 	border-radius:100%;
-	margin-top:20%;
+	margin-top:15vh;
 	border:medium solid #facba9;
 }
 
@@ -12,10 +12,11 @@
 	margin:0 auto;
 	width:100%;
 	text-align:center;
+	max-width:480px;
 }
 
 #loginContainer {
-	padding-top:30%;
+	padding-top:18.75vh;
 	width:100%;
 }
 
@@ -47,42 +48,26 @@
 }
 
 #completeContainer {
-	margin-top:12.5%;
-}
-
-#completePadding1 {
-	width:50px;
-	display:inline;
-	height:100%;
-}
-#completePadding2 {
-	width:100%;
-	display:inline;
-	height:100%;
+	margin-top:10vh;
 }
 
 #completeButton {
-	background-color:#f16703;
-	width:65%;
-	margin:0 auto;
-	border-radius:3px;
-	padding:0px 5px;
+	width:calc(65% + 8px);
 	height:34px;
+	border:none;
+	border-radius:5px;
+	background:#f16703;
 }
 
-.dropShadow {
-	box-shadow:0px 3px 4px #d05800;
-}
-
-.insetShadow {
-	box-shadow: inset 0px 3px 4px #d05800;
-}
-
-#completeText {
+#buttonText {
 	color:white;
-	font-size:1.1em;
-	padding-top:5px;
-	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+	font-size:2em;
+	text-align:center;
+}
+
+#spacer {
+	width:2em;
+	display:inline-block;
 }
 
 input:focus {
