--- a/login.css
+++ b/login.css
@@ -1,115 +1,98 @@
 @charset "utf-8";
 /* CSS Document */
 
-body, html {
-	border: none;
-	padding: 0px;
-	margin: 0px;
+html, body {
+	margin:0;
 }
 
-.circular {
-	width:35.5%;
-	border-radius:100%;
-	margin-top:27.1%;
-	border:8px solid #facba9;
-	display:inline-block;
-}
-
-.center {
-	margin:0 auto;
+#backdrop {
+	height:185px;
 	width:100%;
+	position:absolute;
+	background-color:#f86800;
+	z-index:-1;
+}
+
+#top {
+	height:360px;
+	margin:0 auto;
 	text-align:center;
 }
 
-#loginContainer {
-	margin-top:34.4%;
-}
-
-.stretchy {
-	width:64%;
-	padding-bottom:16.6%;
-	position:relative;
-}
-
-.stretchy > div {
-    position: absolute;
-    top: 0; bottom: 0; left: 0; right: 0;
-}
-
-#loginWrapper {
-	position:static;
-	margin:0 27.15%;
+#imageContainer {
+	width:129px;
+	height:129px;
+	margin-top:96px;
 	display:inline-block;
-	border:1px solid #999;
-	padding:5px 5px;
-	border-radius:10px;
-	text-align:justify;
-	width:100%;
-	height:41.4%;
+	border-radius:64.5px;
+	border:5px solid #fa8028;
+	overflow:hidden;
 }
 
-#loginIcon {
-	float:left;
-	width: 6.6%;
-	margin: 3.5% 2.7%;
+#userImage {
+	width:129px;
+	height:129px;
 }
 
+#bottom {
+	text-align:center;
+}
 
+#inputContainer {
+	width:calc(100% - 128px);
+	height:40px;
+	border-radius:5px;
+	border:1px solid #bbbbbb;
+	margin:0 auto;
+}
 
 #inputWrapper {
-	float:left;
-	height:100%;
-	width:calc(86.4%);
-	display: inline-block;
-}
-
-
-
-#login {
+	height:14px;
 	width:100%;
-	border:none;
-	padding:none;
-	height:100%;
-	font-size:1.6em;
+	margin:13px 12px 15px 12px;;
 }
 
-#completeContainer {
-	margin-top:12.5%;
+#userInputIcon {
+	height:14px;
+	float:left;
 }
 
-#completeButton {
-	position:static;
-	margin:0 27.15%;
-	width:103%;
-	width:calc(100% + 12px);
-	height:calc(41.4% + 12px);
+#userInput {
+	float:left;
+	margin-left:13px;
+	height:14px;
+	font-size:14px;
+	padding:0;
 	border:none;
+	width:calc(100% - 61px);
+	outline:none;
+}
+
+#buttonContainer {
+	margin-top:47px;
+	margin-bottom:153px;
+}
+
+#submitButton {
+	height:40px;
+	width: calc(100% - 128px);
+	background-color:#f16703;
 	border-radius:5px;
-	background:#f16703;
+	outline:none;
+	border:none;
 	color:white;
-	font-size:40px;
-	letter-spacing:60px;
+	font-size:20px;
+	letter-spacing:17px;
 }
 
 .unpressed {
-	box-shadow:2px 4px 4px #d05800;
+	box-shadow:0 3px 0 #d05800;
+	margin-bottom:3px;
+	margin-top:0;
 }
 
 .pressed {
 	box-shadow:none;
-}
-
-#buttonText {
-	color:white;
-	font-size:40px;
-	text-align:center;
-}
-
-#spacer {
-	width:62px;
-	display:inline-block;
-}
-
-:focus {
-	outline:none;
+	margin-top:3px;
+	margin-bottom:0;
 }
