--- a/login.css
+++ b/login.css
@@ -5,41 +5,68 @@ html, body {
 	margin:0;
 }
 
-#backdrop {
-	height:185px;
-	width:100%;
-	position:absolute;
-	background-color:#f86800;
-	z-index:-1;
-}
 
 #top {
-	height:360px;
-	margin:0 auto;
+	height:187px;
+	margin:0 auto 175px auto;
 	text-align:center;
+	background-color:#f86800;
 }
 
 #imageContainer {
-	width:129px;
-	height:129px;
-	margin-top:96px;
-	display:inline-block;
+	width:140px;
+	height:140px;
+	margin:0 auto;
+	padding-top:96px;
+}
+
+#imageWrapper {
+	height:130px;
+	width:130px;
 	border-radius:50%;
-	border:5px solid #fa8028;
 	overflow:hidden;
+	margin:5px;
 }
 
 #userImage {
-	width:129px;
-	height:129px;
+	height:130px;
+	width:130px;
+	border-radius:130px;
+}
+
+#cutoff {
+	position:absolute;
+	height:91px;
+	width:140px;
+	overflow:hidden;
+}
+
+#topBorder {
+	width:130px;
+	height:130px;
+	border-radius:130px;
+	border:5px solid #fa8028;
+	z-index:10;
+}
+
+#bottomBorder {
+	position:absolute;
+	width:130px;
+	height:130px;
+	border-radius:130px;
+	border:5px solid #ffe3d0;
+	z-index:-10;
 }
 
 #bottom {
 	text-align:center;
+	margin:0 auto;
+	width:65%;
+	min-width:233px;
 }
 
 #inputContainer {
-	width:calc(100% - 128px);
+	width:100%;
 	height:40px;
 	border-radius:5px;
 	border:1px solid #bbbbbb;
@@ -55,27 +82,33 @@ html, body {
 #userInputIcon {
 	height:14px;
 	float:left;
+	position:relative;
+}
+
+#userInputWrapper {
+	height:100%;
+	margin-left:38px;
+	margin-right:38px;
 }
 
 #userInput {
 	float:left;
-	margin-left:13px;
 	height:14px;
+	width:100%;
 	font-size:13px;
 	padding:0;
 	border:none;
-	width:calc(100% - 61px);
+	width:100%;
 	outline:none;
 }
 
 #buttonContainer {
 	margin-top:47px;
-	margin-bottom:153px;
 }
 
 #submitButton {
-	height:40px;
-	width: calc(100% - 128px);
+	height:39px;
+	width: 100%;
 	background-color:#f16703;
 	border-radius:5px;
 	outline:none;
@@ -83,6 +116,11 @@ html, body {
 	color:white;
 	font-size:20px;
 	letter-spacing:17px;
+}
+
+#bottomSpacer {
+	min-height:100px;
+	width:100%;
 }
 
 .unpressed {
