--- a/zuimeila/css/zuimeila.css
+++ b/zuimeila/css/zuimeila.css
@@ -6,23 +6,23 @@ body {
 	margin:0;
 }
 
-#top {
+.top {
 	text-align:center;
 	width:100%;
 	height:166px;
 
 }
 
-#top img {
+.top img {
 	height:166px;
 	width:360px;
 }
 
-#middle {
+.middle {
 	padding-bottom:56px;
 }
 
-#middle > div {
+.middle > div {
 	height:359px;
 	width:245px;
 	margin:0 auto;
@@ -86,36 +86,36 @@ body {
 	width:100%;
 }
 
-#bottom {
+.bottom {
 	background:#e7e6dc;
 	padding-top:27px;
 	text-align:center;
 	min-height:200px;
 }
 
-#bottom .sectionCaption {
+.bottom .sectionCaption {
 	padding:none;
 	background:none;
 }
 
-#bottom h3 {
+.bottom h3 {
 	font-size:12px;
 	color:#666;
 	margin:8px auto 0 auto;
 	font-weight:normal;
 }
 
-#appContainer {
+.appContainer {
 	width:161px;
 	height:124px;
 	margin:26px auto 0 auto;
 }
 
-#appContainer .app {
+.appContainer .app {
 	display:inline;
 }
 
-#appContainer .caption {
+.appContainer .caption {
 	overflow:visible;
 }
 
